--- a/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
+++ b/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
@@ -41,13 +41,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Alerta, asteroide muy cerca\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
-        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false."
+        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
+        "velocidadAsteroide = 49\n",
+        "if velocidadAsteroide >=25:\n",
+        "    print('Alerta, asteroide muy cerca')\n",
+        "else:\n",
+        "    print('No hay de que preocuparse')\n"
       ]
     },
     {
@@ -59,13 +72,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No olvides mirar las estrellas\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
-        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False"
+        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False\n",
+        "velocidadAsteroide = 19\n",
+        "if velocidadAsteroide > 20:\n",
+        "    print('Mira el cielo, hay una luz es un asteroide :(')\n",
+        "elif velocidadAsteroide == 20:\n",
+        "    print('Mira el cielo, ¿hay una luz?')\n",
+        "else:\n",
+        "    print('No olvides mirar las estrellas')"
       ]
     },
     {
@@ -99,13 +127,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mira el cielo, hay una luz\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
-        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra."
+        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra.\n",
+        "\n",
+        "velocidadAsteroide = 25\n",
+        "dimensionAsteroide = 40\n",
+        "if velocidadAsteroide > 25 and dimensionAsteroide > 25:\n",
+        "    print('¡Alerta, un asteroide se acerca, resguardate')\n",
+        "elif velocidadAsteroide >= 20:\n",
+        "    print('Mira el cielo, hay una luz')\n",
+        "elif dimensionAsteroide < 25:\n",
+        "    print('No olvides mirar las estrellas')\n",
+        "else:\n",
+        "    print('La vida es bella')"
       ]
     },
     {
@@ -124,9 +171,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¡Alerta! ¡Un asteroide se acerca a velocidades peligrosas!\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
@@ -148,9 +203,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¡Nada que ver aquí!\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
@@ -174,9 +237,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Look up! ¡Hay una luz mágica en el cielo!\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
@@ -231,7 +302,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
