--- a/Módulo 4 - Cadenas/Módulo4Katas.ipynb
+++ b/Módulo 4 - Cadenas/Módulo4Katas.ipynb
@@ -12,6 +12,26 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Temperatures And Facts About The Moon'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "'temperatures and facts about the moon'.title()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -41,7 +61,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Añade el código necesario"
+        "# Añade el código necesario\n",
+        "text = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. \n",
+        "On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\"\n",
+        "textDividido = text.split('. ')\n",
+        "textDividido"
       ]
     },
     {
@@ -57,7 +81,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Define las palabras pista: average, temperature y distance suenan bien"
+        "# Define las palabras pista: average, temperature y distance suenan bien\n",
+        "text = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. \n",
+        "On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\"\n",
+        "claves = [\"average\", \"temperature\", \"distance\"]"
       ]
     },
     {
@@ -73,7 +100,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Ciclo for para recorrer la cadena"
+        "# Ciclo for para recorrer la cadena\n",
+        "text = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. \n",
+        "On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\"\n",
+        "textDividido = text.split('. ')\n",
+        "claves = [\"average\", \"temperature\", \"distance\"]\n",
+        "\n",
+        "for sentence in textDividido:\n",
+        "    for claves in claves:\n",
+        "        if claves in sentence:\n",
+        "            print(sentence)\n",
+        "            break"
       ]
     },
     {
@@ -89,7 +126,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Ciclo para cambiar C a Celsius"
+        "# Ciclo para cambiar C a Celsius\n",
+        "text = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. \n",
+        "On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\"\n",
+        "textDividido = text.split('. ')\n",
+        "claves = [\"average\", \"temperature\", \"distance\"]\n",
+        "for sentence in textDividido:\n",
+        "    for claves in claves:\n",
+        "        if claves in sentence:\n",
+        "            print(sentence.replace(' C', ' Celsius'))\n",
+        "            break"
       ]
     },
     {
@@ -140,11 +186,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos el título"
+        "# Creamos el título\n",
+        "name = \"Moon\"\n",
+        "gravity = 0.00162 # in kms\n",
+        "planet = \"Earth\"\n",
+        "title = 'La gravedad en la {name}'"
       ]
     },
     {
@@ -156,11 +206,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos la plantilla"
+        "# Creamos la plantilla\n",
+        "name = \"Moon\"\n",
+        "gravity = 0.00162 # in kms\n",
+        "planet = \"Earth\"\n",
+        "hechos = f\"\"\"{'-'*80} \n",
+        "Nombre del planeta: {planet} \n",
+        "Gravedad en {name}: {gravity * 1000} m/s2 \n",
+        "\"\"\""
       ]
     },
     {
@@ -172,11 +229,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Earth \n",
+            "Gravedad en Moon: 1.6199999999999999 m/s2 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Unión de ambas cadenas"
+        "# Unión de ambas cadenas\n",
+        "name = \"Moon\"\n",
+        "gravity = 0.00162 # in kms\n",
+        "planet = \"Earth\"\n",
+        "hechos = f\"\"\"{'-'*80} \n",
+        "Nombre del planeta: {planet} \n",
+        "Gravedad en {name}: {gravity * 1000} m/s2 \n",
+        "\"\"\"\n",
+        "union = f\"\"\"{title.title()} \n",
+        "{hechos} \n",
+        "\"\"\" \n",
+        "print(hechos)"
       ]
     },
     {
@@ -195,12 +274,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Earth \n",
+            "Gravedad en Moon: 1.6199999999999999 m/s2 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Comprueba la plantilla\n",
-        "# print(nombre_plantilla)"
+        "# print(nombre_plantilla)\n",
+        "name = \"Moon\"\n",
+        "gravity = 0.00162 # in kms\n",
+        "planet = \"Earth\"\n",
+        "planeta = 'Marte '\n",
+        "gravedad  = 0.00143\n",
+        "nombre = 'Ganímedes'\n",
+        "hechos = f\"\"\"{'-'*80} \n",
+        "Nombre del planeta: {planet} \n",
+        "Gravedad en {name}: {gravity * 1000} m/s2 \n",
+        "\"\"\"\n",
+        "union = f\"\"\"{title.title()} \n",
+        "{hechos} \n",
+        "\"\"\" \n",
+        "print(hechos)"
       ]
     },
     {
@@ -212,11 +316,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Earth \n",
+            "Gravedad en Moon: 1.6199999999999999 m/s2 \n",
+            "\n",
+            "\n",
+            "Datos de Gravedad sobre: Ganímedes\n",
+            "-------------------------------------------------------------------------------\n",
+            "Nombre del planeta: Marte \n",
+            "Gravedad en Ganímedes: 0.00143 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Nueva plantilla"
+        "# Nueva plantilla\n",
+        "name = \"Moon\"\n",
+        "gravity = 0.00162 # in kms\n",
+        "planet = \"Earth\"\n",
+        "\n",
+        "hechos = f\"\"\"{'-'*80} \n",
+        "Nombre del planeta: {planet} \n",
+        "Gravedad en {name}: {gravity * 1000} m/s2 \n",
+        "\"\"\"\n",
+        "union = f\"\"\"{title.title()} \n",
+        "{hechos} \n",
+        "\"\"\" \n",
+        "print(hechos)\n",
+        "planeta = 'Marte '\n",
+        "gravedad  = 0.00143\n",
+        "nombre = 'Ganímedes'\n",
+        "new_template = \"\"\"\n",
+        "Datos de Gravedad sobre: {nombre}\n",
+        "-------------------------------------------------------------------------------\n",
+        "Nombre del planeta: {planeta}\n",
+        "Gravedad en {nombre}: {gravedad} m/s2\n",
+        "\"\"\"\n",
+        "print(new_template.format(nombre=nombre, planeta=planeta, gravedad=gravedad))\n"
       ]
     },
     {
@@ -228,11 +371,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Earth \n",
+            "Gravedad en Moon: 1.6199999999999999 m/s2 \n",
+            "\n",
+            "\n",
+            "Datos de Gravedad sobre: Ganímedes\n",
+            "-------------------------------------------------------------------------------\n",
+            "Nombre del planeta: Marte \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Pista: print(nueva_plantilla.format(variables))"
+        "# Pista: print(nueva_plantilla.format(variables))\n",
+        "name = \"Moon\"\n",
+        "gravity = 0.00162 # in kms\n",
+        "planet = \"Earth\"\n",
+        "\n",
+        "hechos = f\"\"\"{'-'*80} \n",
+        "Nombre del planeta: {planet} \n",
+        "Gravedad en {name}: {gravity * 1000} m/s2 \n",
+        "\"\"\"\n",
+        "union = f\"\"\"{title.title()} \n",
+        "{hechos} \n",
+        "\"\"\" \n",
+        "print(hechos)\n",
+        "planeta = 'Marte '\n",
+        "gravedad  = 0.00143\n",
+        "nombre = 'Ganímedes'\n",
+        "new_template = \"\"\"\n",
+        "Datos de Gravedad sobre: {nombre}\n",
+        "-------------------------------------------------------------------------------\n",
+        "Nombre del planeta: {planeta}\n",
+        "Gravedad en {nombre}: {gravedad} m/s2\n",
+        "\"\"\"\n",
+        "print(new_template.format(nombre=nombre, planeta=planeta, gravedad=gravedad*1000))"
       ]
     },
     {
@@ -438,7 +620,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
