--- a/Módulo 5 - Usar operaciones matemáticas/Módulo5Katas.ipynb
+++ b/Módulo 5 - Usar operaciones matemáticas/Módulo5Katas.ipynb
@@ -24,12 +24,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Crear variables para almacenar las dos distancias\n",
-        "# ¡Asegúrate de quitar las comas!"
+        "# ¡Asegúrate de quitar las comas!\n",
+        "distancia1planeta = 149597870\n",
+        "distancia2planeta = 778547200"
       ]
     },
     {
@@ -43,11 +45,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "628949330\n",
+            "390577533.93\n"
+          ]
+        }
+      ],
       "source": [
-        "# Calcular la distancia entre planetas"
+        "# Calcular la distancia entre planetas\n",
+        "distancia1planeta = 149597870\n",
+        "distancia2planeta = 778547200\n",
+        "\n",
+        "distancia = distancia2planeta - distancia1planeta\n",
+        "print(distancia)\n",
+        "\n",
+        "distanciaConvercion = distancia* 0.621\n",
+        "print(distanciaConvercion)\n"
       ]
     },
     {
@@ -90,12 +109,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Almacenar las entradas del usuario\n",
-        "#Pista: variable = input(\"¿Cuál es tu nombre?\")"
+        "#Pista: variable = input(\"¿Cuál es tu nombre?\")\n",
+        "distancia1planeta = input('Introduzca la distancia para el primer planeta')\n",
+        "distancia2planeta= input('Introduzca la distancia para el segundo planeta')"
       ]
     },
     {
@@ -108,11 +129,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Convierte las cadenas de ambos planetas a números enteros"
+        "# Convierte las cadenas de ambos planetas a números enteros\n",
+        "distancia1planeta = input('Introduzca la distancia para el primer planeta')\n",
+        "distancia2planeta= input('Introduzca la distancia para el segundo planeta')\n",
+        "distancia1planeta = int(distancia1planeta)\n",
+        "distancia2planeta = int(distancia2planeta)"
       ]
     },
     {
@@ -126,14 +151,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "50300000\n",
+            "31236300.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Realizar el cálculo y determinar el valor absoluto\n",
+        "distancia1planeta = input('Introduzca la distancia para el primer planeta')\n",
+        "distancia2planeta= input('Introduzca la distancia para el segundo planeta')\n",
+        "distancia1planeta = int(distancia1planeta)\n",
+        "distancia2planeta = int(distancia2planeta)\n",
         "\n",
+        "distancia=abs(distancia1planeta-distancia2planeta)\n",
+        "print(distancia)\n",
         "\n",
-        "# Convertir de KM a Millas"
+        "# Convertir de KM a Millas\n",
+        "distanciaConvercion=abs(distancia*0.621)\n",
+        "print(distanciaConvercion)"
       ]
     },
     {
@@ -280,7 +322,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
