--- a/CursoIntro Phyton/Módulo 6 - Introducción a las listas/Módulo6Katas.ipynb
+++ b/CursoIntro Phyton/Módulo 6 - Introducción a las listas/Módulo6Katas.ipynb
@@ -31,7 +31,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos la lista planets y la mostramos"
+        "# Creamos la lista planets y la mostramos\n",
+        "planetas = ['Mercurio', 'Venus', 'Tierra', 'Marte', 'Jupiter', 'Saturno', 'Urano','Neptuno']\n",
+        "print(planetas)"
       ]
     },
     {
@@ -47,7 +49,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Agregamos a plutón y mostramos el último elemento"
+        "# Agregamos a plutón y mostramos el último elemento\n",
+        "planetas = ['Mercurio', 'Venus', 'Tierra', 'Marte', 'Jupiter', 'Saturno', 'Urano','Neptuno']\n",
+        "\n",
+        "planetas.append('Plutón')\n",
+        "\n",
+        "print(planetas[-1], 'es el ultimo planeta del sistema solar')"
       ]
     },
     {
@@ -82,7 +89,8 @@
       "outputs": [],
       "source": [
         "# Lista de planetas\n",
-        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Neptune']"
+        "planetas = ['Mercurio', 'Venus', 'Tierra', 'Marte', 'Jupiter', 'Saturno', 'Urano','Neptuno']\n",
+        "\n"
       ]
     },
     {
@@ -100,7 +108,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Solicitamos el nombre de un planeta *Pista:  input()*"
+        "# Solicitamos el nombre de un planeta *Pista:  input()*\n",
+        "insertaPlaneta = input('Ingresa un planeta iniciando con Mayúscula')"
       ]
     },
     {
@@ -117,7 +126,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Busca el planeta en la lista"
+        "# Busca el planeta en la lista\n",
+        "planetas_index = planetas.index(insertaPlaneta)"
       ]
     },
     {
@@ -135,7 +145,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Muestra los planetas más cercanos al sol"
+        "# Muestra los planetas más cercanos al sol\n",
+        "print('El planeta mas cercano es ' + insertaPlaneta)\n",
+        "print(planetas[0:planetas_index])"
       ]
     },
     {
@@ -153,7 +165,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Muestra los planetas más lejanos al sol"
+        "# Muestra los planetas más lejanos al sol\n",
+        "print('El planeta mas lejano es:' + insertaPlaneta)\n",
+        "print(planetas[planetas_index + 1:])"
       ]
     },
     {
