--- a/CursoIntro Phyton/Módulo 7 - Estructuras de control/Módulo7Katas.ipynb
+++ b/CursoIntro Phyton/Módulo 7 - Estructuras de control/Módulo7Katas.ipynb
@@ -29,7 +29,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Declara dos variables"
+        "new_planet = ''\n",
+        "planets = []vars"
       ]
     },
     {
@@ -51,7 +52,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Escribe el ciclo while solicitado"
+        "# Escribe el ciclo while solicitado\n",
+        "while new_planet.lower() != 'done':\n",
+        "    if new_planet:\n",
+        "        planets.append(new_planet)\n",
+        "    new_planet = input('Enter a new planet ')"
       ]
     },
     {
@@ -89,7 +94,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Escribe tu ciclo for para iterar en una lista de planetas"
+        "# Escribe tu ciclo for para iterar en una lista de planetas\n",
+        "for planet in planets:\n",
+        "    print(planet)"
       ]
     },
     {
