--- a/CursoIntro Phyton/Módulo 9 - Funciones/Módulo9Katas.ipynb
+++ b/CursoIntro Phyton/Módulo 9 - Funciones/Módulo9Katas.ipynb
@@ -33,7 +33,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función para leer 3 tanques de combustible y muestre el promedio\n"
+        "# Función para leer 3 tanques de combustible y muestre el promedio\n",
+        "def reporte(tanque1, tanque2, tanque3):\n",
+        "promedio = (tanque1 + tanque2 + tanque3) / 3\n",
+        "return f\"\"\"Reporte de gasolina:\n",
+        "PromedioTotal: {promedio}%\n",
+        "tanque1: {tanque1}%\n",
+        " tanque2: {tanque2}%\n",
+        "    tanque3: {tanque3}% \n",
+        "    \"\"\"\n"
       ]
     },
     {
@@ -50,7 +58,8 @@
       "outputs": [],
       "source": [
         "\n",
-        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))"
+        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
+        "print(reporte(80, 70, 85))"
       ]
     },
     {
@@ -66,7 +75,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función promedio "
+        "# Función promedio \n",
+        "def promedio(values):\n",
+        "    total = sum(values)\n",
+        "    Cantidad = len(values)\n",
+        "    return total / Cantidad\n",
+        "\n",
+        "promedio([80, 85, 81]) "
       ]
     },
     {
@@ -82,7 +97,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Actualiza la función"
+        "# Actualiza la función\n",
+        "def reporte(tanque1, tanque2, tanque3):\n",
+        "    return f\"\"\"Reporte de gasolina:\n",
+        "    PromedioTotal: {Promedio([tanque1, tanque2, tanque3])}%\n",
+        "   tanque1: {tanque1}%\n",
+        "    tanque2 {tanque2}%\n",
+        "    tanque3 {tanque3}% \n",
+        "    \"\"\"\n",
+        "print(reporte(88, 76, 70))"
       ]
     },
     {
@@ -113,14 +136,22 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno"
+        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
+        "def ReporteMision(prelanzamiento, tiempoVuelo, destino, tanque2, tanque1):\n",
+        "    return f\"\"\"\n",
+        "    mision a: {destino}\n",
+        "    tiempo total de viaje: {prelanzamiento + tiempoVuelo} minutes\n",
+        "    combustible restante {tanque2 + tanque1} galones\n",
+        "    \"\"\"\n",
+        "\n",
+        "print(ReporteMision(14, 51, \"luna\", 200000, 300000))"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "La función es problemática porque no se puede adaptar para minutos adicionales o tanques adicionales de combustible. Hazlo más flexible permitiendo cualquier número de pasos basados en el tiempo y cualquier número de tanques. En lugar de usar `*args` y `**kwargs`, aprovecha el hecho de que puedes usar cualquier nombre que desees. Asegurate que la función sea más legible mediante el uso de nombres de variables que están asociados con las entradas, como `*minutes` y `**fuel_reservoirs`:"
+        "La función es problemática porque no se puede adaptar para minutos adicionales o tanques adicionales de combustible. Hazlo más flexible permitiendo cualquier número de pasos basados en el tiempo y cualquier número de tanques. En lugar de usar `*args` y `**kwargs`, aprovecha el hecho de que puedes usar cualquier nombre que desees. Asegurate que la función sea más legible mediante el uso de nombres de variables que están asociados con las entradas, como `*minutes` y `**reservas`:"
       ]
     },
     {
@@ -129,7 +160,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Escribe tu nueva función de reporte considerando lo anterior"
+        "# Escribe tu nueva función de reporte considerando lo anterior\n",
+        "def ReporteMision(destino, *minutes, **reservas):\n",
+        "    return f\"\"\"\n",
+        "    Mission to {destino}\n",
+        "    tiempo total de viaje {sum(minutes)} minutes\n",
+        "    combustible restante {sum(reservas.values())}\n",
+        "    \"\"\"\n",
+        "\n",
+        "print(ReporteMision(\"luna\", 10, 15, 51, principal=300000, externo=200000))"
       ]
     },
     {
@@ -145,7 +184,18 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Escribe tu nueva función"
+        "# Escribe tu nueva función\n",
+        "def ReporteMision(destino, *minutes, **reservas):\n",
+        "    main_report = f\"\"\"\n",
+        "    mision a {destino}\n",
+        "    tiempo total de viaje {sum(minutes)} minutes\n",
+        "    combustible restante {sum(reservas.values())}\n",
+        "    \"\"\"\n",
+        "    for ntanque, galones in reservas.items():\n",
+        "        main_report += f\"{ntanque} tank --> {galones} galones left\\n\"\n",
+        "    return main_report\n",
+        "\n",
+        "print(ReporteMision(\"luna\", 8, 11, 55, principal=300000, externo=200000))"
       ]
     },
     {
